--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-.env
-cities.txtmodels/RandomForestModel/rf_model.pkl
-=======
 .envmodels/RandomForestModel/rf_model.pkl
 models/RandomForestModel/rf_model.pkl
->>>>>>> c324b03360a804656f1794e7733593bf7f40e815
 models/RandomForestModel/rf_model.pkl
+cities.txt
